--- a/.github/workflow.yml
+++ b/.github/workflow.yml
@@ -6,18 +6,17 @@ on:
       - master
 
 jobs:
-  build-and-push:
+  build-container:
+    name: Build container
     runs-on: Ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
-
+      uses: actions/checkout@v3
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with: 
         username: ${{ secrets.DOCKER_USERNAME }}       
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
+        password: ${{ secrets.DOCKER_PASSWORD }} 
     - name: Build and push to Docker Hub
       uses: docker/build-push-action@v2
       with:
@@ -25,11 +24,5 @@ jobs:
         push: true
         tags: chinanuchinedu/gitdockertest:latest, chinanuchinedu/gitdockertest:${{ github.run_number }}
 
-
-    # - name: Build Docker image
-    #   run: docker build -t <dockerhub-username>/<image-name>:<tag> .
-
-    # - name: Push Docker image to Docker Hub
-    #   run: docker push <dockerhub-username>/<image-name>:<tag>
 
     
