--- a/.github/workflow.yml
+++ b/.github/workflow.yml
@@ -1,14 +1,8 @@
-name: Push to Docker hub
-
-on:
-  push:
-    branches:
-      - master
-
+on: push
 jobs:
   build-container:
     name: Build container
-    runs-on: Ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
