--- a/.github/workflow.yml
+++ b/.github/workflow.yml
@@ -1,22 +1,24 @@
-on: push
+name: Build and Push Docker Image
+
+on:
+  push:
+    branches: [master]
+
 jobs:
-  build-container:
-    name: Build container
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
+
     - name: Login to Docker Hub
       uses: docker/login-action@v1
-      with: 
-        username: ${{ secrets.DOCKER_USERNAME }}       
-        password: ${{ secrets.DOCKER_PASSWORD }} 
-    - name: Build and push to Docker Hub
-      uses: docker/build-push-action@v2
       with:
-        context: .
-        push: true
-        tags: chinanuchinedu/gitdockertest:latest, chinanuchinedu/gitdockertest:${{ github.run_number }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
+    - name: Build Docker image
+      run: docker build -t chinanuchinedu/gitdockertest:latest .
 
-    
+    - name: Push Docker image to Docker Hub
+      run: docker push chinanuchinedu/gitdockertest:latest
